--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -20,96 +20,70 @@
       </div>
     </nav>
 
-<section class="mt160">
-  <div class="container wow fadeIn">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>L'histoire de Nubia</h1>
-      </div>
-    </div>
-  </div>
-
-</section>
-<section>
-    <div id="projects-help" class=" wow slideInDown">
-      <div class="item">
-        <div class="row">
-          <div class="col-md-7">
-            <img class="img-responsive" src="@routes.Assets.at("img/project-girl.jpg")" alt="">
-          </div>
-          <div class="col-md-5">
-            <div class="project-description">
-              <h3>Nubia</h3>
-              <p>est une association culturelle crée en Novembre 1974 à Paris par des universitaires soucieux de
-                contribuer à la promotion de la culture africaine dans toutes ses manifestations traditionnelles et
-                contemporaines. Ils avaient pour but d’encourager la recherche, l’éducation scolaire et universitaire
-                par le biais de l’édition et de la diffusion. </p>
-
-              <a class="btn btn-orange" href="#">Lire la suite</a>
+    <section class="mt160">
+        <div class="container wow fadeIn">
+            <div class="row">
+                <div class="col-md-12">
+                    <h5 class="fz-16" >L'histoire de Nubia</h5>
+                    <hr>
+                </div>
             </div>
-          </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="blog-post-fwidth bounceInDown">
+                        <p>
+                            L’association Nubia a été créée en Novembre 1974, à Paris, par des universitaires soucieux de contribuer à la promotion de la culture africaine dans toutes ses manifestations traditionnelles et contemporaines.<br>
+                                Ils avaient pour but d’encourager la recherche, l’éducation scolaire et universitaires par le biais de l’édition et de la diffusion (consulter nos statuts). <br>
+                                La conjugaison de leurs efforts a permis la publication de 34 ouvrages de qualité en français, créole antillais, anglais, allemand, peulh, wolof et bambara.<br>
+                                Ces ouvrages sont le fruit d’un travail de recherche méticuleux rendant accessible une culture de tradition orale.
+
+                        </p>
+                            <blockquote>
+                            <p>Après plusieurs années de sommeil Nubia est de retour !! Plus forte que jamais !</p>
+                        </blockquote>
+                        <p>
+                            La ligne éditoriale fixée par les fondateurs ( Amadou Hampaté Bâ, Alfa Ibrahima Sow, Alpha Condé, Maurice Ahanhanzo Glélé, Aimée Ngali, Robert Dossou, Olabiyi Babalola Yaï, Diouldé Laya, Christiane Seydou, Kiflé Béseat, Tchicaya U Tam’si,) reste inchangée mais nous nous intéressons, aussi, aux manuscrits qui portent sur des représentations nuancées de l’Afrique et sa diaspora, dans les Amériques et ailleurs, et qui contribueront à libérer les lecteurs de l’emprisonnement des clichés pour une meilleure vision du problématique de l’identité culturelle.<br>
+                                Plus globalement, nous sommes ouverts à tous les sujets qui permettront une meilleure connaissance des communautés noires au travers de leurs diversités et aspects communs dans ce contexte de mondialisation.
+                        </p>
+                        <p>
+                            Si vous êtes auteur d’une œuvre qui traite les thèmes de convention et rébellion, obstacles et défis, et ce dans les domaines de la fiction, de l’éducation, la santé, l’environnement, la politique, l’économie, les arts et le sport, n’hésitez pas à nous les faire parvenir (Déposer vos manuscrits). Nous nous ferons un devoir de vous répondre, une fois que notre comité éditorial en aura pris connaissance.
+                        </p>
+
+                        <p>
+                            Nubia, se modernise en mettant en place des outils de communication performants, vitrine de l’association.
+
+                        </p>
+
+                        <p>
+                            Nubia est accessible, par l’intermédiaire de notre site, sur la Librairie Numérique Africaine, dans les librairies partenaires.
+                        </p>
+                        <p>
+                            Les ouvrages et les activités de Nubia sont financés par les cotisations des membres (Rejoignez-nous) ainsi que les subventions obtenues auprès d’organismes nationaux et internationaux.
+
+                        </p>
+                        <p>
+                           N’hésitez pas à nous contacter. Nous serons heureux de vous accueillir pour vous faire partager l’Afrique et sa diaspora en lettres et en culture.
+
+                        </p>
+
+                        <blockquote>
+                            <p>Le bureau de l’Association Nubia</p>
+                            <ul>
+                                <li>Jannaati Sow, Présidente</li>
+                                <li>Elsie Augustave, Secrétaire Administrative</li>
+                                <li>Mathieu Gbetro, Trésorier</li>
+                            </ul>
+                        </blockquote>
+
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+
+            </div>
         </div>
-      </div>
 
-    </div>
-</section>
-<section>
-  <div class="container wow fadeIn">
-    <div class="row">
-      
-      <div class="col-sm-3 text-center help-ways">
-        <img src="@routes.Assets.at("img/event.png")" alt="">
-        <h2>Nubia se modernise !</h2>
-        <hr>
-        <p>En mettant en place des outils de communication performants, vitrine de l’association.</p>
-      </div>
-      
-      <div class="col-sm-3 text-center help-ways">
-        <img src="@routes.Assets.at("img/event.png")" alt="">
-        <h2>Nubia est accessible !</h2>
-        <hr>
-        <p>Nos ouvrages sont disponibles sur le site Internet « soumbala.com », à la librai- rie Anibwé (Paris) et
-          bientôt à travers le monde.</p>
-      </div>
 
-      <div class="col-sm-3 text-center help-ways">
-        <img src="@routes.Assets.at("img/event.png")" alt="">
-        <h2>Nubia renaît !</h2>
-        <hr>
-        <p>Bien sûr l’idée de base reste omniprésente dans l’objet de l’association mais une ouverture est faite sur la
-          culture africaine dans sa globalité. </p>
-      </div>
+    </section>
 
-    </div>
-  </div>
-</section>
-
-<section>
-  <div id="find-us" class="wow slideInDown">
-    <div class="item">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="find-img">
-            <img src="@routes.Assets.at("img/find-us.jpg")" alt="">
-          </div>
-          <div class="find-text text-center">
-            <div class="spot-heading">
-              <h1>Nubia</h1>
-            </div>
-            <div class="find-details">
-              <p> Nous sommes heureux de vous accueillir pour vous faire partager une Afrique en lettres et en
-                culture.</p>
-            </div>
-          </div>
-          <div class="find-quote">
-            <p>Nous accueillons en notre sein : auteurs, peintres, sculpteurs, designers... souhaitant faire connaître
-              leurs œuvres et participer à la promotion de la culture africaine.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
 
   @footer()
