--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -44,6 +44,16 @@
         });
 </script>
 
+<script>
+    $('textarea').keypress(function(){
+
+        if(this.value.length > 500){
+            return false;
+        }
+        $("#remainingC").html("-" +(500 - this.value.length));
+    });
+</script>
+
 
 </body>
 </html>
