--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -28,7 +28,7 @@
                 <div class="fullscreenbanner">
                     <ul>
                         <li data-transition="fade" data-slotamount="0">
-                            <img alt="#" src="@routes.Assets.at("img/slider/1.jpg")"/>
+                            <img alt="#" src="@routes.Assets.at("img/slider/4.jpg")"/>
                             <div class="caption sfb"
                                  data-x="center"
                                  data-y="center"
@@ -43,49 +43,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li data-transition="slide" data-slotamount="10">
-                            <img alt="#" src="@routes.Assets.at("img/slider/3.jpg")"/>
-                            <div class="caption sfb sl3"
-                                 data-x="left"
-                                 data-y="center"
-                                 data-speed="1000"
-                                 data-start="1000"
-                                 data-easing="easeOutExpo">
 
-                                <div class="slider-center">
-                                    <div class="spon-child text-center">
-                                        <h2>Newsletter</h2>
-                                        <span class="droid">En mettant en place des outils de communication performants, vitrine de l’association.</span>
-                                    </div>
-                                    <div class="child-info">
-                                        <div class="child-fill-info">
-                                            <form method="post" action="">
-                                                <input type="text" class="form-control" placeholder="Nom">
-                                                <input type="email" class="form-control" placeholder="Email">
-                                                <div class="choose-option mt10">
-                                                    <select class="selectpicker form-control" title="Pays">
-                                                        <option>Albanie</option>
-                                                        <option>Amerique</option>
-                                                        <option>Niger</option>
-                                                    </select>
-                                                </div>
-                                                <div class="mt30 text-center">
-                                                    <button type="submit" class="btn-orange-ol">S'inscrire</button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="child-spon-details text-center">
-                                            <h1>Nubia</h1>
-                                            <p>Après dix années de sommeil, Nubia renaît ! Nous accueillons en notre
-                                                sein : auteurs, peintres, sculpteurs, designers etc. souhaitant faire
-                                                connaître leurs œuvres et participer à la promotion de la culture
-                                                africaine.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -93,7 +51,7 @@
     </div>
 </div>
 
-<section>
+@*<section>
     <div class="container wow fadeIn">
         <div class="row">
 
@@ -148,6 +106,6 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 
     @footer()
