--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -1,9 +1,9 @@
 <ul class="nav navbar-nav">
     <li><a href="/">Accueil</a></li>
-    <li><a href="/about">L'histoire de Nubia</a></li>
-    <li><a href="/teams">Bureau</a></li>
-    <li><a href="/catalogs">Catalogue</a></li>
-    <li><a href="/join-us">Rejoignez-mous</a></li>
-    <li><a href="/contact-us">Contactez-nous</a></li>
-    <li><a href=""><i class="fa fa-search fa-lg"></i></a></li>
+    <li><a href="/about">Notre histoire</a></li>
+    <li><a href="/teams">Le bureau</a></li>
+    <li><a href="/catalogs">Le catalogue</a></li>
+    @*<li><a href="/join-us">Vos manuscrits</a></li>*@
+    <li><a href="/join-us">Devenir membre</a></li>
+    <li><a href="/contact-us">Vos questions</a></li>
 </ul>
