--- a/app/views/catalogs.scala.html
+++ b/app/views/catalogs.scala.html
@@ -24,15 +24,14 @@
     <div class="container wow slideInDown">
         <div class="row">
             <div class="col-md-12">
-                <h1>Notre catalogue</h1>
+                <h5 class="fz-16" >Le catalogue</h5>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-6 our-work-main mt30">
-                <a href="/catalogs/theatre/books" title="Culture Africaine et Tradition Orale">
+                <a href="/catalogs/cultures-africaines-et-tradition-orale/books" title="Culture Africaine et Tradition Orale">
                     <div class="our-work-inner">
-                        <img class="img-responsive" src="@routes.Assets.at("img/environment.jpg")" alt="">
                         <div class="our-work-hover">
                             <div class="our-work-hover-text text-uppercase">
                                 <h4>Culture Africaine et Tradition Orale</h4>
@@ -42,9 +41,8 @@
                 </a>
             </div>
             <div class="col-md-4 col-sm-6 our-work-main mt30">
-                <a href="/catalogs/theatre/books" title="Histoire et Sciences Politiques">
+                <a href="/catalogs/histoire-et-politique/books" title="Histoire et Sciences Politiques">
                     <div class="our-work-inner">
-                        <img class="img-responsive" src="@routes.Assets.at("img/education.jpg")" alt="">
                         <div class="our-work-hover">
                             <div class="our-work-hover-text text-uppercase">
                                 <h4>Histoire et Sciences Politiques</h4>
@@ -55,12 +53,11 @@
             </div>
             <div class="clearfix visible-sm-block"></div>
             <div class="col-md-4 col-sm-6 our-work-main mt30">
-                <a href="/catalogs/theatre/books" title="Jeunesses">
+                <a href="/catalogs/jeunesse/books" title="Jeunesses">
                     <div class="our-work-inner">
-                        <img class="img-responsive" src="@routes.Assets.at("img/healthcare.jpg")" alt="">
                         <div class="our-work-hover">
                             <div class="our-work-hover-text text-uppercase">
-                                <h4>Jeunesses</h4>
+                                <h4>Jeunesse</h4>
                             </div>
                         </div>
                     </div>
@@ -70,12 +67,11 @@
             <!-- </div>
             <div class="row mt60"> -->
             <div class="col-md-4 col-sm-6 our-work-main mt60">
-                <a href="/catalogs/theatre/books" title="Langages Africaines">
+                <a href="/catalogs/langues-africaines/books" title="Langages Africaines">
                     <div class="our-work-inner">
-                        <img class="img-responsive" src="@routes.Assets.at("img/playground.jpg")" alt="">
                         <div class="our-work-hover">
                             <div class="our-work-hover-text text-uppercase">
-                                <h4>Langages Africaines</h4>
+                                <h4>Langues Africaines</h4>
                             </div>
                         </div>
                     </div>
@@ -83,9 +79,8 @@
             </div>
             <div class="clearfix visible-sm-block"></div>
             <div class="col-md-4 col-sm-6 our-work-main mt60">
-                <a href="/catalogs/theatre/books" title="Poesie">
+                <a href="/catalogs/poesie/books" title="Poesie">
                     <div class="our-work-inner">
-                        <img class="img-responsive" src="@routes.Assets.at("img/toys.jpg")" alt="">
                         <div class="our-work-hover">
                             <div class="our-work-hover-text text-uppercase">
                                 <h4>Poesie</h4>
@@ -97,7 +92,6 @@
             <div class="col-md-4 col-sm-6 our-work-main mt60">
                 <a href="/catalogs/theatre/books" title="Theatre">
                     <div class="our-work-inner">
-                        <img class="img-responsive" src="@routes.Assets.at("img/healthcare1.jpg")" alt="">
                         <div class="our-work-hover">
                             <div class="our-work-hover-text text-uppercase">
                                 <h4>Theatre</h4>
