--- a/app/views/join_us.scala.html
+++ b/app/views/join_us.scala.html
@@ -24,113 +24,15 @@
     <div class="container">
         <div class="row wow slideInDown">
             <div class="col-md-12">
-                <h1>Envoyez votre manuscrit </h1>
+                <h5 class="fz-16">Telecharger le formulaire d'adhesion</h5>
+                <hr>
             </div>
             <div class="row mt30">
                 <div class="col-md-12 wow fadeIn">
-                    <h2>Faites éditer votre livre, envoyez votre manuscrit en toute confiance</h2>
-                    <div class="contact-us mt50">
-                        <div class="row mt30">
-                            <div class="col-md-8">
-                                <form action="#" method="post">
-                                    <div class="fl-name row">
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Prenom *">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Nom *">
-                                        </div>
-                                    </div>
-                                    <div class="fl-name row">
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Adresse *">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Code postal *">
-                                        </div>
-                                    </div>
-                                    <div class="fl-name row">
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Pays *">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Ville *">
-                                        </div>
-                                    </div>
-                                    <div class="fl-name row">
-                                        <div class="col-md-6">
-                                            <input type="email" class="form-control" placeholder="Email *">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Site internet">
-                                        </div>
-                                    </div>
-                                    <div class="fl-name row">
-                                        <div class="col-md-6">
-                                            <input type="file" class="form-control"
-                                                   placeholder="Joindre le manuscrit *">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="text" class="form-control" placeholder="Titre du livre *">
-                                        </div>
-                                    </div>
-                                    <textarea name="your-message" id="resume" rows="10" class="form-control"
-                                              placeholder="Résumé du livre"></textarea>
-                                    <textarea name="your-message" id="auteur" rows="10" class="form-control"
-                                              placeholder="Informations sur l'auteur"></textarea>
-                                    <div class="mt30">
-                                        <button type="submit" class="btn-orange">Envoyer</button>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="cotact-details mb30 mt10">
-                                    <div class="row">
-                                        <div class="col-md-5">
-                                            <i class="fa fa-map-marker orange"></i> <span
-                                                class="text-bold"> Adresse:</span>
-                                        </div>
-                                        <div class="col-md-7">
-                                            <span>68, bd de Port Royal 75005 Paris</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="cotact-details mb30">
-                                    <div class="row">
-                                        <div class="col-md-5">
-                                            <i> <img src="@routes.Assets.at("img/envelope.png")" alt=""></i> <span
-                                                class="text-bold"> E-mail:</span>
-                                        </div>
-                                        <div class="col-md-7">
-                                            <span>info@@assonubia.org</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="cotact-details mb30">
-                                    <div class="row">
-                                        <div class="col-md-5">
-                                            <i class="fa fa-phone orange"></i> <span
-                                                class="text-bold"> Telephone:</span>
-                                        </div>
-                                        <div class="col-md-7">
-                                            <span>+ 33 6 24 39 65 03</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="cotact-details mb30">
-                                    <div class="row">
-                                        <div class="col-md-5">
-                                            <i><img src="@routes.Assets.at("img/fax.png")" alt=""></i> <span
-                                                class="text-bold"> Télécopie:</span>
-                                        </div>
-                                        <div class="col-md-7">
-                                            <span>+ 33 1 45 35 81 00</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <blockquote>
+                        <p><a href="@routes.Assets.at("file/formulaire-adhesion-nubia-2016.pdf")" title="Formulaire d'adhesion" target="_blank">Formulaire</a> </p>
+                    </blockquote>
+
                 </div>
 
             </div>
