--- a/app/views/teams.scala.html
+++ b/app/views/teams.scala.html
@@ -23,7 +23,7 @@
     <div class="container wow slideInDown">
         <div class="row">
             <div class="col-md-12">
-                <h1>Bureau et Conseil d'administration</h1>
+                <h5 class="fz-16" >Le bureau et le Conseil d’administration</h5>
                 <hr>
             </div>
         </div>
@@ -31,88 +31,70 @@
             <div class="col-sm-6 mt20  p-lr-30">
                 <div class="row gray-bg">
                     <div class="col-md-6 no-padding-left">
-                        <img src="@routes.Assets.at("img/our-team/team1.jpg")" alt="" class="img-responsive">
+                        <img src="@routes.Assets.at("img/our-team/janna-sow-thumb.jpg")" alt="" class="img-responsive">
                     </div>
                     <div class="col-md-6">
                         <h5 class="text-uppercase fz-16 mt30">Janna Sow</h5>
-                        <h5 class="orange fz-16">- Profession</h5>
-                        <p class="mt30 mb30">Une presentation sur Janna Sow doit etre inseree ia cet endroid</p>
-                        <div class="social-detail mt20 no-padding no-margin">
-                            <a href="#"><i class="fa fa-facebook-f"></i></a>
-                            <a href=""><i class="fa fa-twitter"></i></a>
+                        <h5 class="orange fz-16">Présidente </h5>
+                        <p class="mt30 mb30">Après des études de Droit et de communication, Janna a occupé des postes d’Executive assistant et Office Manager dans de grandes entreprises francophones et anglophones.</p>
+                        <div class="social-detail mt20 no-margin-left">
+                            <a href="/teams/janna-sow">voir profil</a>
                         </div>
+                        <br><br>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 mt20 p-lr-30">
                 <div class="row gray-bg">
                     <div class="col-md-6 no-padding-left">
-                        <img src="@routes.Assets.at("img/our-team/team2.jpg")" alt="" class="img-responsive">
+                        <img src="@routes.Assets.at("img/our-team/elsie-augustave-thumb.jpg")" alt="" class="img-responsive">
                     </div>
                     <div class="col-md-6">
                         <h5 class="text-uppercase fz-16 mt30">Elsie Augustave</h5>
-                        <h5 class="orange fz-16">- Profession</h5>
-                        <p class="mt30 mb30">Une presentation sur Elsie Augustave doit etre inseree ia cet endroid</p>
+                        <h5 class="orange fz-16">Secrétaire administrative</h5>
+                        <p class="mt30 mb30">Née en Haïti, Elsie Augustave est diplômée en études de littérature et en langues étrangères aux universités de Middlebury College dans le Vermont et Howard University à Washington, DC.</p>
                         <div class="social-detail mt20 no-margin-left">
-                            <a href="#"><i class="fa fa-facebook-f"></i></a>
-                            <a href=""><i class="fa fa-twitter"></i></a>
+                            <a href="/teams/elsie-augustave">voir profil</a>
                         </div>
+                        <br><br>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row ">
-            <div class="col-sm-6 mt20 p-lr-30">
+        <div class="row mt30">
+            <div class="col-sm-6 mt20  p-lr-30">
                 <div class="row gray-bg">
                     <div class="col-md-6 no-padding-left">
-                        <img src="@routes.Assets.at("img/our-team/team3.jpg")" alt="" class="img-responsive">
+                        <img src="@routes.Assets.at("img/our-team/mathieu-gbetro-thumb.jpg")" alt="" class="img-responsive">
                     </div>
                     <div class="col-md-6">
                         <h5 class="text-uppercase fz-16 mt30">Mathieu Gbetro</h5>
-                        <h5 class="orange fz-16">- Profession</h5>
-                        <p class="mt30 mb30">Une presentation sur Mathieu Gbetro doit etre inseree ia cet endroid</p>
-                        <div class="social-detail mt20 no-padding no-margin">
-                            <a href="#"><i class="fa fa-facebook-f"></i></a>
-                            <a href=""><i class="fa fa-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 mt20 p-lr-30">
-                <div class="row gray-bg">
-                    <div class="col-md-6 no-padding-left">
-                        <img src="@routes.Assets.at("img/our-team/team4.jpg")" alt="" class="img-responsive">
-                    </div>
-                    <div class="col-md-6">
-                        <h5 class="text-uppercase fz-16 mt30">Aïssa Diallo</h5>
-                        <h5 class="orange fz-16">- Profession</h5>
-                        <p class="mt30 mb30">Une presentation sur Aïssa Diallo doit etre inseree ia cet endroid</p>
+                        <h5 class="orange fz-16">Trésorier</h5>
+                        <p class="mt30 mb30">Diplômé en gestion, marketing digital et en droit des nouvelles technologies, Mathieu a évolué dans plusieurs entreprises leader du secteur : AOL, Orange et autres. </p>
                         <div class="social-detail mt20 no-margin-left">
-                            <a href="#"><i class="fa fa-facebook-f"></i></a>
-                            <a href=""><i class="fa fa-twitter"></i></a>
+                            <a href="/teams/mathieu-gbetro">voir profil</a>
                         </div>
+                        <br><br>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 mt20 p-lr-30">
+
+            <div class="col-sm-6 mt20  p-lr-30">
                 <div class="row gray-bg">
-                    <div class="col-md-6 no-padding-left">
-                        <img src="@routes.Assets.at("img/our-team/team5.jpg")" alt="" class="img-responsive">
-                    </div>
-                    <div class="col-md-6">
-                        <h5 class="text-uppercase fz-16 mt30">Amadou Woury Diallo</h5>
-                        <h5 class="orange fz-16">- Profession</h5>
-                        <p class="mt30 mb30">Une presentation sur Amadou Woury Diallo doit etre inseree ia cet
-                            endroid</p>
-                        <div class="social-detail mt20 no-padding no-margin">
-                            <a href="#"><i class="fa fa-facebook-f"></i></a>
-                            <a href=""><i class="fa fa-twitter"></i></a>
-                        </div>
+                    <div class="col-md-12">
+                        <h5 class="text-uppercase fz-16 mt30">Ils siègent au Conseil d’administration avec : </h5>
+                        <ul>
+                            <li>Aïssa Diallo</li>
+                            <li>Amadou Oury Diallo</li>
+                            <li>Stéphane Dolivet</li>
+                            <li></li>
+                        </ul>
+                        <br><br>
                     </div>
                 </div>
             </div>
+
+
         </div>
 
     </div>
